--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,17 @@ apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
+tasks.withType(JavaCompile) { 
+	options.compilerArgs << '-proc:none'
+}
+
 apply plugin: 'application'
 mainClassName = 'com.test.engine.Main'
 
 repositories {
     mavenCentral()
 }
+
 
 dependencies {
 	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
@@ -21,7 +26,7 @@ dependencies {
 	
 	testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.7.4'
 	testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.2.0'
 	testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '1.7.4'
 
 	
